# img_maniac

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/shader/: shader_progress_indicator.wgsl  shader_separate_channel.wgsl  shader_seperate_channel.wgsl
src/: check_img_format.rs  iter_files.rs  main.rs  mat_progress_indicator.rs  mat_separate_channel.rs  mat_seperate_channel.rs
src/shader/: mat_separate_channel.rs  mod.rs  separate_channel.wgsl  shader_separate_channel.wgsl
src/systems/: cam_control.rs  file_drop.rs  mod.rs  op.rs  rearrange.rs
