[package]
name = "img_maniac"
version = "0.4.0"
edition = "2021"
authors = ["Allen Dang <allengnr@gmail.com>"]
description = "A powerful image viewer"
license = "MIT OR Apache-2.0"

[package.metadata.bundle]
name = "img_maniac"
identifier = "com.allendang.img_maniac"
icon = ["icon/app.png"]
version = "0.3.3"
copyright = "Copyright (c) Allen Dang 2023. All rights reserved."
category = "Developer Tool"
short_description = "A powerful image viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"
opt-level = 3
codegen-units = 1

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["basis-universal", "bevy_pbr", "bevy_scene", "bevy_ui", "bevy_winit", "bmp", "dds", "default_font", "hdr", "jpeg", "png", "pnm", "tga", "tonemapping_luts", "webp", "x11", "zlib"] }
bevy_mod_picking = { version = "0.20", default-features = false, features = [
  "backend_raycast",
  "selection",
] }
imagesize = { version = "0.13" }
taffy = { version = "0.5", default-features = false, features = ["std"] }
