[package]
name = "img_maniac"
version = "0.5.0"
edition = "2021"
authors = ["Allen Dang <allengnr@gmail.com>"]
description = "A powerful image viewer"
license = "MIT OR Apache-2.0"

[package.metadata.bundle]
name = "img_maniac"
identifier = "com.allendang.img_maniac"
icon = ["icon/app.png"]
version = "0.3.3"
copyright = "Copyright (c) Allen Dang 2023. All rights reserved."
category = "Developer Tool"
short_description = "A powerful image viewer"

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
strip = "symbols"
opt-level = "z"
codegen-units = 1

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_asset",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "bmp",
  "default_font",
  "exr",
  "ff",
  "gif",
  "hdr",
  "ico",
  "jpeg",
  "multi_threaded",
  "png",
  "pnm",
  "qoi",
  "tga",
  "tiff",
  "webp",
] }
imagesize = "0.13.0"
taffy = "0.7.5"
